# Streamsight

./: .gitignore  LICENSE  README.md  genindex.html  index.html  mkdocs.yml  objects.inv  poster.html  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  streamsight.algorithms.html  streamsight.datasets.html  streamsight.evaluators.html  streamsight.matrix.html  streamsight.preprocessing.html  streamsight.registries.html  streamsight.settings.html  streamsight.utils.html  zreferences.html
.github/: pull_request_template.md  sphinx.yml
.github/workflows/: mkdocs_deploy.yml  sphinx.yml
_sources/: index.rst.txt  poster.rst.txt
docs/: about.md  architecture_draft.md  fyp_draft.md  index.md  reference.bib  split_setting_blockdiagram.drawio  unknown_data_handling.md  unknown_user_setting_3.md
docs/Report/: Interim report.tex
docs/Research log/: 03--Feb--2024.md  14--Jan--2024.md  15--Jan--2024.md  16--Jan--2024.md  17--Jan--2024.md  19--Jan--2024.md  23--Feb--2024.md  26--Jan--2024.md  28--Jan--2024.md  29--Jan--2024.md
docs/diagram/: diagrams.drawio  metric_table.drawio  sliding_setting_data_control.drawio  sliding_setting_scheme.drawio  split_setting_blockdiagram.drawio
docs/research log/: 30--Jan--2024.md  architecture_draft.md  data_split.md  data_split_result.tex  toolkit_comparison.tex
docs/source/: conf.py  index.rst  refs.bib  streamsight.algorithms.rst  streamsight.datasets.rst  streamsight.evaluator.rst  streamsight.evaluators.rst  streamsight.matrix.rst  (+18 more)
examples/: ItemKNNIncremntal_EndpointFlow.ipynb  LOGGING_CONFIG.yaml  amazon_movie_decaypop.ipynb  amazon_movie_recentpop.ipynb  amazonmusic_TAitemknn_inc_ding.ipynb  amazonmusic_TAitemknn_inc_liu.ipynb  amazonmusic_TAitemknn_inc_vaz.ipynb  amazonmusic_decaypop.ipynb  amazonmusic_itemknn_inc_random.ipynb  amazonmusic_itemknn_inc_recentpop.ipynb  amazonmusic_mostpop.ipynb  amazonmusic_recentpop.ipynb  demo.ipynb  demo_pipeline.ipynb  demo_stream.ipynb  demo_window_size_variation.ipynb  demo_without_pipeline.ipynb  endpoint_flow_test_dataset.ipynb  lastfm_TAitemknn_inc_ding.ipynb  lastfm_TAitemknn_inc_liu.ipynb  lastfm_TAitemknn_inc_vaz.ipynb  lastfm_decaypop.ipynb  lastfm_itemknn_inc_random.ipynb  lastfm_itemknn_inc_recentpop.ipynb  lastfm_mostpop.ipynb  lastfm_recentpop.ipynb  movielens_TAitemknn_inc_ding.ipynb  movielens_TAitemknn_inc_liu.ipynb  movielens_TAitemknn_inc_vaz.ipynb  movielens_TAitemknn_incremental.ipynb  movielens_decaypop.ipynb  movielens_decaypop_endpoint.ipynb  movielens_itemknn_inc_metadata.ipynb  movielens_itemknn_inc_random.ipynb  movielens_itemknn_inc_recentpop.ipynb  movielens_itemknn_incremental.ipynb  movielens_itemknn_incremental_metadatapad.ipynb  movielens_itemknn_incremental_randompad.ipynb  movielens_mostpop.ipynb  movielens_recentpop.ipynb  (+4 more)
scripts/: gen_ref_pages.py
streamsight/: LOGGING_CONFIG.yaml  __init__.py  logger.py
streamsightv2/: __init__.py
test/: conftest.py
(+271 files in other folders)
