[project]
name = "streamsight"
version = "1.0.0"
description = "A toolkit for offline evaluation of Recommender Systems."
readme = "README.md"
keywords = ["recsys", "recommendation", "practical evaluation", "global timeline", "reccomender systems", "data leakage"]
dependencies = [
    "colorama>=0.4.6",
    "colorlog>=6.10.1",
    "deprecation>=2.1.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "progressbar>=2.5",
    "pyfiglet>=1.0.4",
    "scikit-learn>=1.7.2",
    "sphinxcontrib-bibtex>=2.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
]


