[project]
name = "streamsight"
version = "2.0.1"
description = "A toolkit for offline evaluation of Recommender Systems."
requires-python = ">=3.12"
readme = "README.md"
keywords = ["recsys", "recommendation", "practical evaluation", "global timeline", "reccomender systems", "data leakage"]
dependencies = [
    "colorama>=0.4.6",
    "colorlog>=6.10.1",
    "deprecation>=2.1.0",
    "httpx>=0.28.1",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "progressbar>=2.5",
    "pyarrow>=22.0.0",
    "pyfiglet>=1.0.4",
    "recpack>=0.3.6",
    "scikit-learn>=1.7.2",
    "simplejson>=3.20.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pytest>=9.0.1",
]
docs = [
    "sphinx>=7.3.6",
    "sphinxcontrib-bibtex>=2.6.5",
    "sphinx-rtd-theme>=1.2.2",
    "sphinxcontrib-pdfembed",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
]

[tool.uv]
default-groups = "all"
package = true

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
sphinxcontrib-pdfembed = { git = "https://github.com/SuperKogito/sphinxcontrib-pdfembed" }
